# summ

./: .gitignore  .readthedocs.yaml  .venv  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml  test.yml
docs/: index.md  requirements.txt
docs/css/: annotations.css  code_select.css
docs/reference/: index.md
docs/reference/pipeline/: classify.md  embed.md  factify.md  import.md  index.md  query.md  splitting.md  structure.md  summarize.md
docs/reference/utils/: cache.md  chain.md  cli.md  index.md
examples/otter/: README.md
examples/otter/implementation/: __init__.py  __main__.py  classes.py  classifier.py
examples/otter/interviews/: Alex - UiPath - ML PM.txt  Ben - UiPath - ML PM.txt  Bob - UiPath - ML Product Manger.txt  Brady - UiPath - Sales.txt  Brendan - UiPath - Sales.txt  George - Green Prism - Lead Developer.txt  Kevin - Greenhouse - Senior RPA Developer.txt  Ricardo - Automation Anywhere - Customer Success.txt  Richard - Wordpress - Customer Success.txt  fpuaa88i9zrerh9qhb902fsms19h_otter_ai.txt
examples/otter/tests/: test_example.py
interviews/: Amy - Blue Prism - Lead Automation Developer.txt  Kirtan - Guidehouse - Senior RPA Developer.txt
scripts/: release.sh
summ/: __about__.py  __init__.py  example.py  pipeline.py  summ.py
summ/cache/: __init__.py  cacher.py
summ/classify/: __init__.py  classes.py  classifier.py
summ/cli/: __init__.py  app.py  cli.py  styles.css  utils.py
summ/cli/screens/: main.py  screen.py  settings.py  welcome.py
summ/cli/widgets/: file.py  home.py  input_with_label.py  output_tree.py  reactive_tree.py
summ/embed/: __init__.py  embedder.py
summ/examples/otter/: README.md
summ/examples/otter/implementation/: __init__.py  classes.py  classifier.py
summ/examples/otter/interviews/: 2022_cronutt_audio_final_otter_ai.txt
summ/examples/otter/tests/: test_example.py
summ/factify/: __init__.py  factifier.py
summ/importers/: __init__.py  importer.py
summ/query/: querier.py
summ/shared/: chain.py  models.py  utils.py
summ/splitter/: __init__.py  gpt_splitter.py  otter.py  splitter.py
summ/structure/: __init__.py  sql_structurer.py  structurer.py
summ/structurer/: sql_structurer.py  structurer.py
summ/summarize/: summarizer.py
summ/tools/: cli.py  example.py
summex/otter/interviews/: 9cbb258e-1134-df63-70c5-ecbcd282ce9b_otter_ai.txt
summex/otter/tests/: test_example.py
tests/: __init__.py  test_example.py  test_interviews.py
user_interview_summary/: __init__.py  __main__.py  pipeline.py
user_interview_summary/cache/: cacher.py
user_interview_summary/classify/: classes.py  classifier.py
user_interview_summary/embed/: embedder.py
user_interview_summary/factify/: factifier.py
user_interview_summary/query/: querier.py
user_interview_summary/shared/: chain.py  utils.py
user_interview_summary/splitter/: splitter.py
user_interview_summary/summarize/: summarizer.py
